--- a/log_in.html
+++ b/log_in.html
@@ -22,8 +22,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
  </head>
  <body>
 
-   <div class="pie-form">
-            
+   <div class="cli-form">
                 <div id="login">
                     <form id="loginform">
                         <div class="titulo"> Iniciar Sesion</div>
