Cambio de color

--- a/log_in.html
+++ b/log_in.html
@@ -26,7 +26,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
                 <div id="login">
                     <form id="loginform">
                         <div class="titulo"> Iniciar Sesion</div>
-                        <label for="usuario"></label>
+                        <label for="correo"></label>
                         <input id="correo" type="email" name="nombre" placeholder="Correo" required>
 
                         <label for="password"></label>
