--- a/log_in.html
+++ b/log_in.html
@@ -15,6 +15,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/log_in.css">
+    <link rel="shortcut icon" href="assets/img/Logo.png">
     <link href="https://maxcdn.bootstrapcdn.com/font-..." rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -22,9 +23,13 @@ NAVARRO GUTIÉRREZ ESTHEFANI
 </head>
 
 <body>
-
+   
     <div class="cli-form">
-        <div id="login">
+        <div id="login"> 
+            <div id="logo">
+        <img src="assets/img/Logo.png" width="300px">
+       <h2>Cu-commerce</h2>
+    </div>
             <form id="loginform">
                 <div class="titulo"> Iniciar Sesion</div>
                 <label for="correo"></label>
@@ -39,11 +44,12 @@ NAVARRO GUTIÉRREZ ESTHEFANI
 
         </div>
         <div id="derecho">
-            <hr>
-            <a href="#">¿No tienes Cuenta? Registrate</a>
 
+            <a href="#">¿No tienes Cuenta? Registrate</a>
+            
         </div>
     </div>
+    <h3 class="Empresa">By Mercury Intelligence</h3>
     <footer footer>
         <ul class="redes">
             <div class="wrapper">
@@ -71,7 +77,8 @@ NAVARRO GUTIÉRREZ ESTHEFANI
 
         </ul>
     </footer>
-    <!-- <h1>En esta pagina va el Log in</h1> -->
+   
+    <script src="assets/scripts/log_in.js"></script>
 </body>
 
 </html>
