--- a/inicio.html
+++ b/inicio.html
@@ -42,7 +42,47 @@ NAVARRO GUTIÉRREZ ESTHEFANI
             </div>
 
             <div id="Config">
-                <h4>Aqui los iconos de configuracion</h4>
+                <h4>Aqui los iconos de configuracion
+                    <button onclick="abrirModal()" id="agregar">Publicar</button>
+
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <span class="cerrar">&times;</span>
+    <h2>Agregar Producto</h2>
+    <p>Caracteristicas:</p>
+    <section>
+        <form action="<?php echo htmlspecialchars($_SERVER['PHP_SELF'])?>" method="post" class="formulario" enctype="multipart/form-data">
+            <label for="title">Nombre del producto: </label>
+            <input type="text" name="title" id="title" required>
+            <label for="intro">Descripcion: </label>
+            <textarea name="intro" id="intro" placeholder="Descripcion del producto"></textarea>
+
+            <label for="descrption">Precio: </label>
+            <input type="number" id="precio" name="precio" step="1" min="0" required><br>
+
+            <label for="image">Selecciona imagen del producto</label>
+            <input type="file" name="image" id="image" required>
+
+            <label for="categoria">Categoria: </label>
+            
+
+            <label for="caducidad">Caducidad: </label>
+            <input type="date" id="fecha" name="fecha">
+
+            <?php if(isset($error)):?>
+                <p class="error"><?php echo $error;?></p>
+            <?php elseif(isset($msg)):?>
+                <p class="success"><?php echo $msg;?></p>
+            <?php endif;?>
+
+            <input type="submit" value="Publicar">
+            <input type="reset" value="Descartar">
+        </form>
+    </section>
+  </div>
+</div>
+
+                </h4>
             </div>
         </div>
     </header>
@@ -59,5 +99,10 @@ NAVARRO GUTIÉRREZ ESTHEFANI
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 </body>
+
+<head>
+    <script src="assets/scripts/inicio.js"></script>
+  </head>
+  
 
 </html>
