--- a/sing_up.html
+++ b/sing_up.html
@@ -15,8 +15,49 @@ NAVARRO GUTIÉRREZ ESTHEFANI
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cu-Commerce</title>
+    <link rel="stylesheet" href="./assets/styles/sing_up.css">
 </head>
+
 <body>
-    <h1>En esta pagina va el sing up</h1>
+    <main>
+
+        <div class="contenedor">
+            <div class="trasera">
+                <div class="traseraLogin">
+                    <h3>¿Tienes una cuenta creada?</h3>
+                    <p>Inicia sesión</p>
+                    <button id="btn-iniciar-sesion">Iniciar sesión</button>
+                </div>
+
+                <div class="traseraSing">
+                    <h3>¿No tines una cuenta creada?</h3>
+                    <p>Registrate</p>
+                    <button id="btn-registro">Registro</button>
+                </div>
+            </div>
+
+            <div class="contenedor_registro">
+
+                <form action="" class="formulario_login">
+                    <h2>Iniciar sesión</h2>
+                    <input type="text" placeholder="Correo electronico">
+                    <input type="password" placeholder="Contraseña">
+                    <button>Iniciar</button>
+                </form>
+
+                <form class="formulario_sing">
+                    <h2>Registro</h2>
+                    <input type="text" placeholder="Nombre completo">
+                    <input type="text" placeholder="Correo institucional">
+                    <input type="password" placeholder="Contraseña">
+                    <input type="password" placeholder="Repite la contraseña">
+                    <button>Registrarse</button>
+
+                </form>
+            </div>
+        </div>
+
+    </main>
 </body>
+
 </html>
