--- a/log_in.html
+++ b/log_in.html
@@ -29,6 +29,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
             <div id="logo">
         <img src="assets/img/Logo.png" width="300px">
        <h2>Cu-commerce</h2>
+       <h1>El comercio entre nosotros</h1>
     </div>
             <form id="loginform">
                 <div class="titulo"> Iniciar Sesion</div>
