Comentarios, Se modifico la web de inicio para que mostrara imagenes

--- a/log_in.html
+++ b/log_in.html
@@ -23,7 +23,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
 </head>
 
 <body>
-   
+   <!-- este es el logo y el header de la pagina de inicio de sesion/registrarse -->
     <div class="cli-form">
         <div id="login"> 
             <div id="logo">
@@ -31,6 +31,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
        <h2>Cu-commerce</h2>
        <h1>El comercio entre nosotros</h1>
     </div>
+            <!-- formulario de inicio de sesión/registrarse -->
             <form id="loginform">
                 <div class="titulo"> Iniciar Sesion</div>
                 <label for="correo"></label>
@@ -45,7 +46,7 @@ NAVARRO GUTIÉRREZ ESTHEFANI
 
         </div>
         <div id="derecho">
-
+            <!-- botón de acceso directo a registrarse -->
             <a href="#">¿No tienes Cuenta? Registrate</a>
             
         </div>
